# VideoEditor

./: .CMakeLists.txt.swp  .gitignore  .gitmodules  CMakeLists.txt  README.md  test.cpp
lib/FFmpeg/: CMakeLists.txt
res/: test.xpm
src/: App  AppTest  CMakeCache.txt  CMakeLists.txt  TextPanelSizer.cpp  TextPanelSizer.h  VideoEditor.cpp  VideoEditor.h  VideoEditorBase.cpp  VideoEditorHome.cpp  VideoEditorHome.h  cmake_install.cmake  main.cpp  program
src/gui/: VideoEditorBase.cpp  VideoEditorBase.h  VideoEditorHome.cpp  VideoEditorHome.h
src/processing/: ffmpeg_util.c  ffmpeg_util.h  video_processing.cpp  video_processing.h
src/util/: ApplicationStatusLog.cpp  ApplicationStatusLog.h  ApplicationWordListGenerator.cpp  ApplicationWordListGenerator.h  DataContainer.cpp  DataContainer.h  Dependencies.h  FileComponents.cpp  FileComponents.h  MediaProcessor.cpp  MediaProcessor.h  ProcessorTemplate1.cpp  ProcessorTemplate1.h  test.cpp
src/util/Words-List-File/: Words-List.txt
src/vid_proc/: video_processing.cpp  video_processing.h
